# pytaskwarrior

./: .gitignore  Actually, looking more carefully at this line  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Looking at the test file, I see that it imports  Looking at this line from the demo output  PROMPT.md  PYPI_README.md  README.md  RELEASE_NOTES.md  The key change I made was updating the `get_tasks` method signature from  champion.py  demo.py  mkdocs.yml  print(f"- {task.description} (Priority: {task.priority}, Status: {task.status})")  pyproject.toml  taskwarrior_adapter.py  tips-and-tricks.md
.github/workflows/: ci.yml  release.yml
docs/: building-taskwarrior.md  getting-started.md  index.md  migration-2x-to-3.md  requirements.txt  runtime-config.md  sync.md  taskchampion-adapter.md  tips-and-tricks.md  troubleshooting.md
docs/api/: dto.md  enums.md  exceptions.md  taskwarrior.md
docs/examples/: advanced.md  basic.md  contexts.md
docs/llms/: llms-contexts.md  llms-dates.md  llms-dependencies.md  llms-dtos.md  llms-errors.md  llms-index.txt  llms-performance.md  llms-recurring.md  llms-task-patterns.md  llms-taskwarrior.md  llms-udas.md
examples/: README.md  demo.py  example_0_querying.py  example_1_basic.py  example_2_task_operations.py  example_3_contexts.py  example_4_recurring_tasks.py  example_5_time_tracking.py  example_6_advanced_features.py  example_7_date_filters.py  example_8_local_sync.py  example_9_multiuser_sync.py  taskrc_example
examples/task_data/: taskchampion.sqlite3
src/: __init__.py  api_taskrc  taskrc  taskwarrior.py  test_exec.py
src/taskwarrior/: __init__.py  client.py  enums.py  exceptions.py  main.py  task.py
src/taskwarrior/adapters/: __init__.py  taskchampion_adapter.py  taskwarrior_adapter.py  tc_converter.py  tc_filter.py
src/taskwarrior/config/: config_service.py  config_store.py  uda_parser.py
src/taskwarrior/dto/: __init__.py  annotation_dto.py  context_dto.py  task_dto.py  task_id.py  uda_dto.py
src/taskwarrior/protocols/: sync.py
src/taskwarrior/registry/: uda_registry.py
src/taskwarrior/services/: __init__.py  context_service.py  date_calculation_service.py  date_formatter.py  filter_service.py  recurring_service.py  task_service.py  uda_service.py
src/taskwarrior/sync_backends/: factory.py  sync_local.py  sync_protocol.py
src/taskwarrior/tests/: test_date_calculation_service.py  test_empty_description.py
src/taskwarrior/utils/: conversions.py  date_resolver.py  dto_converter.py  virtual_tags.py
taskwarrior.bin/: Dockerfile
tests/: conftest.py  test_adapter.py  test_adapter_basic.py  test_adapter_tasks.py  test_date_calculation_integration.py  test_dto.py  test_integration.py  test_main.py  test_main_get_udas.py  test_mocked_warrior.py  test_recurring_tasks.py  test_task_model.py  test_taskwarrior_api.py  test_taskwarrior_init.py  test_taskwarrior_tasks.py  test_taskwarrior_utils.py  test_warrior.py
tests/unit/: test_adapter_basic.py  test_adapter_context.py  test_adapter_mocked.py  test_adapter_sync.py  test_adapter_tasks.py  test_config_store.py  test_context_service.py  test_date_resolver.py  test_dto.py  test_empty_description.py  test_get_info_context.py  test_get_tasks_context.py  test_main_context_and_info.py  test_main_methods_extended.py  test_main_sync.py  test_poc_undo.py  test_priority_coverage.py  test_recur_strings.py  test_sync_disabled_facade.py  test_sync_factory.py  test_sync_integration.py  test_sync_local.py  test_task_id.py  test_taskchampion_adapter.py  test_taskwarrior_init.py  test_taskwarrior_tasks.py  test_taskwarrior_utils.py  test_tc_filter.py  test_uda_registry.py  test_uda_service.py  test_uda_values.py  test_utils_conversions.py
