[project]
name = "pytaskwarrior"
version = "0.3.0"
description = "Taskwarrior wrapper python module"
readme = "PYPI_README.md"
requires-python = ">=3.12"
keywords = [ "taskwarrior" ]
dependencies = [
    "isodate>=0.7.2",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest-cov>=7.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]

[project.urls]
homepage = "https://github.com/sznicolas/pytaskwarrior/"

[tool.ruff]
# Target Python 3.12+
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Enable recommended rules + additional quality checks
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "N802",  # Function name should be lowercase (allow test_* methods)
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
