[project]
name = "pytaskwarrior"
version = "1.1.1"
description = "Taskwarrior wrapper python module"
readme = "PYPI_README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = [ "taskwarrior", "task", "productivity", "cli" ]
authors = [
    { name = "sznicolas", email = "sznicolas@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.11.7",
    "taskchampion-py>=2.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest-cov>=7.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/sznicolas/pytaskwarrior/"
Repository = "https://github.com/sznicolas/pytaskwarrior/"
Issues = "https://github.com/sznicolas/pytaskwarrior/issues"
Changelog = "https://github.com/sznicolas/pytaskwarrior/blob/main/CHANGELOG.md"

[tool.setuptools.package-data]
taskwarrior = ["py.typed"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Target Python 3.12+
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Enable recommended rules + additional quality checks
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "N802",    # Function name should be lowercase (allow test_* methods)
    "SIM117",  # Nested `with` statements in tests (patch + pytest.raises idiom)
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
